k8s_hybrid/calico/calicotest/windows.yml
apiVersion: v1
kind: Pod
metadata:
  name: pwsh
  namespace: calico-demo
  labels:
    app: pwsh
spec:
  containers:
    - name: pwsh
      image: mcr.microsoft.com/windows/servercore:ltsc2025
      args:
        - powershell.exe
        - -Command
        - Start-Sleep 360000
      imagePullPolicy: IfNotPresent
  nodeSelector:
    kubernetes.io/os: windows
---
apiVersion: v1
kind: Pod
metadata:
  name: porter
  namespace: calico-demo
  labels:
    app: porter
spec:
  containers:
    - name: porter
      image: docker.io/calico/porter:2022
      ports:
        - containerPort: 80
      imagePullPolicy: IfNotPresent
  nodeSelector:
    kubernetes.io/os: windows
